--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: working_system_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -62,6 +62,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.4
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -77,9 +78,14 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
+flutter_launcher_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/icon.png"
+
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -101,21 +107,21 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+    #   - family: Schyler
+    #     fonts:
+    #       - asset: fonts/Schyler-Regular.ttf
+    #       - asset: fonts/Schyler-Italic.ttf
+    #         style: italic
     - family: MiSans
       fonts:
-          - asset: fonts/MisansTC-Regular.ttf
-            weight: 400
-          - asset: fonts/MisansTC-Medium.ttf
-            weight: 500
-          - asset: fonts/MisansTC-Demibold.ttf
-            weight: 600
-          - asset: fonts/MisansTC-Bold.ttf
-            weight: 700
+        - asset: fonts/MisansTC-Regular.ttf
+          weight: 400
+        - asset: fonts/MisansTC-Medium.ttf
+          weight: 500
+        - asset: fonts/MisansTC-Demibold.ttf
+          weight: 600
+        - asset: fonts/MisansTC-Bold.ttf
+          weight: 700
         # - asset: fonts/MisansTC VF.ttf
   #
   # For details regarding fonts from package dependencies,
